--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
        "4       1  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -230,47 +230,47 @@
        "      <td>34248</td>\n",
        "      <td>50.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
        "      <td>81.96</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>255</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>255</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
+       "      <td>255</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>255</td>\n",
+       "      <td>255</td>\n",
+       "      <td>255</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>255</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>255</td>\n",
+       "      <td>255</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>29224</td>\n",
        "      <td>30.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
        "      <td>91.23</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>255</td>\n",
+       "      <td>255</td>\n",
        "      <td>1</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
+       "      <td>255</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>255</td>\n",
+       "      <td>255</td>\n",
+       "      <td>255</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>255</td>\n",
+       "      <td>255</td>\n",
+       "      <td>255</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -280,22 +280,22 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>206.53</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>255</td>\n",
        "      <td>1</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
+       "      <td>255</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>255</td>\n",
+       "      <td>255</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>255</td>\n",
+       "      <td>255</td>\n",
+       "      <td>255</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>255</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -304,46 +304,46 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>233.30</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>255</td>\n",
        "      <td>1</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
+       "      <td>255</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>255</td>\n",
+       "      <td>255</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>255</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>255</td>\n",
+       "      <td>255</td>\n",
+       "      <td>255</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>29095</td>\n",
        "      <td>71.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
        "      <td>93.60</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>255</td>\n",
+       "      <td>255</td>\n",
        "      <td>1</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>255</td>\n",
+       "      <td>255</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>255</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>255</td>\n",
+       "      <td>255</td>\n",
+       "      <td>255</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>255</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -352,51 +352,51 @@
       ],
       "text/plain": [
        "      id   age  hypertension  heart_disease  avg_glucose_level  bmi  stroke  \\\n",
-       "0  34248  50.0             1              0              81.96  0.0       0   \n",
-       "1  29224  30.0             0              0              91.23  0.0       0   \n",
-       "2  49894  78.0             1              1             206.53  0.0       0   \n",
-       "3  37526  68.0             1              1             233.30  0.0       0   \n",
-       "4  29095  71.0             1              0              93.60  0.0       0   \n",
+       "0  34248  50.0             1             -1              81.96 -1.0      -1   \n",
+       "1  29224  30.0            -1             -1              91.23 -1.0      -1   \n",
+       "2  49894  78.0             1              1             206.53 -1.0      -1   \n",
+       "3  37526  68.0             1              1             233.30 -1.0      -1   \n",
+       "4  29095  71.0             1             -1              93.60 -1.0      -1   \n",
        "\n",
        "   gender  ever_married_No  ever_married_Yes  ...  work_type_Never_worked  \\\n",
-       "0       0                1                 0  ...                       0   \n",
-       "1       0                0                 1  ...                       0   \n",
-       "2       1                0                 1  ...                       0   \n",
-       "3       1                0                 1  ...                       0   \n",
-       "4       0                0                 1  ...                       0   \n",
+       "0     255                1               255  ...                     255   \n",
+       "1     255              255                 1  ...                     255   \n",
+       "2       1              255                 1  ...                     255   \n",
+       "3       1              255                 1  ...                     255   \n",
+       "4     255              255                 1  ...                     255   \n",
        "\n",
        "   work_type_Private  work_type_Self-employed  work_type_children  \\\n",
-       "0                  1                        0                   0   \n",
-       "1                  1                        0                   0   \n",
-       "2                  1                        0                   0   \n",
-       "3                  1                        0                   0   \n",
-       "4                  0                        1                   0   \n",
+       "0                  1                      255                 255   \n",
+       "1                  1                      255                 255   \n",
+       "2                  1                      255                 255   \n",
+       "3                  1                      255                 255   \n",
+       "4                255                        1                 255   \n",
        "\n",
        "   Residence_type_Rural  Residence_type_Urban  smoking_status_Unknown  \\\n",
-       "0                     0                     1                       0   \n",
-       "1                     0                     1                       0   \n",
-       "2                     1                     0                       0   \n",
-       "3                     1                     0                       1   \n",
-       "4                     1                     0                       0   \n",
+       "0                   255                     1                     255   \n",
+       "1                   255                     1                     255   \n",
+       "2                     1                   255                     255   \n",
+       "3                     1                   255                       1   \n",
+       "4                     1                   255                     255   \n",
        "\n",
        "   smoking_status_formerly smoked  smoking_status_never smoked  \\\n",
-       "0                               1                            0   \n",
-       "1                               0                            0   \n",
-       "2                               0                            1   \n",
-       "3                               0                            0   \n",
-       "4                               0                            1   \n",
+       "0                               1                          255   \n",
+       "1                             255                          255   \n",
+       "2                             255                            1   \n",
+       "3                             255                          255   \n",
+       "4                             255                            1   \n",
        "\n",
        "   smoking_status_smokes  \n",
-       "0                      0  \n",
+       "0                    255  \n",
        "1                      1  \n",
-       "2                      0  \n",
-       "3                      0  \n",
-       "4                      0  \n",
+       "2                    255  \n",
+       "3                    255  \n",
+       "4                    255  \n",
        "\n",
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,6 +415,7 @@
     "df = pd.get_dummies(dfo) # converte dados não numéricos.\n",
     "df = df.drop(columns=['gender_Other', 'gender_Male'])\n",
     "df.rename(columns={\"gender_Female\": \"gender\"}, inplace = True)\n",
+    "df = df.replace(to_replace=0,value=-1)\n",
     "\n",
     "# ---------------------------------------- #\n",
     "df.head()"
@@ -422,30 +423,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dfa = df.drop(columns=['stroke','id','age','avg_glucose_level','bmi','ever_married_No']).astype(float)\n",
-    "# dfa = dfa.drop(columns=['work_type_Never_worked','work_type_Private','work_type_Self-employed','work_type_children'])\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(dfa, df['stroke'], train_size=0.5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-1    2432\n",
-       " 1     123\n",
+       "-1    2431\n",
+       " 1     124\n",
        "Name: stroke, dtype: int64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,16 +444,13 @@
     "# dfa = dfa.drop(columns=['work_type_Never_worked','work_type_Private','work_type_Self-employed','work_type_children'])\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(dfa, df['stroke'], train_size=0.5)\n",
-    "y_train = y_train.replace(to_replace=0,value=-1)\n",
-    "y_test = y_test.replace(to_replace=0,value=-1)\n",
-    "# commit bugged\n",
     "\n",
     "y_train.value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,35 +459,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([[ 2.46585752e-02],\n",
-       "        [-1.84142354e+00],\n",
-       "        [ 2.41828223e-01],\n",
-       "        [-7.65328207e-04],\n",
-       "        [-3.60109915e-02],\n",
-       "        [-3.90449313e-01],\n",
-       "        [ 3.42620351e-01],\n",
-       "        [-2.66817303e+00],\n",
-       "        [ 1.18240087e+00],\n",
-       "        [ 1.62429277e+00],\n",
-       "        [ 1.08160290e+00],\n",
-       "        [ 1.23158071e-01],\n",
-       "        [-6.70192061e-01],\n",
-       "        [-4.04377416e-01],\n",
-       "        [ 1.39994502e+00],\n",
-       "        [-8.24671802e-01],\n",
-       "        [ 3.87004282e-01],\n",
-       "        [-1.74237306e-01],\n",
-       "        [ 2.19553314e+00]]),\n",
-       " -0.02390401247327328)"
+       "(array([[-3.41117485e-03],\n",
+       "        [ 9.89539948e-01],\n",
+       "        [ 4.46520433e-01],\n",
+       "        [-9.54129792e-04],\n",
+       "        [-1.32972531e-03],\n",
+       "        [-3.62872752e-04],\n",
+       "        [-4.39712837e-03],\n",
+       "        [-4.39441578e-03],\n",
+       "        [-7.45502339e-01],\n",
+       "        [-7.45538723e-01],\n",
+       "        [-7.45588055e-01],\n",
+       "        [-7.45496403e-01],\n",
+       "        [-7.45265571e-01],\n",
+       "        [-7.60902529e-01],\n",
+       "        [-7.61043227e-01],\n",
+       "        [ 1.24993779e+00],\n",
+       "        [ 1.25024893e+00],\n",
+       "        [ 1.25040932e+00],\n",
+       "        [ 1.25035473e+00]]),\n",
+       " -0.0019268904353147629)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,9 +512,9 @@
     "\n",
     "w = np.random.randn( pontos.shape[0],1)\n",
     "b = 0.0\n",
-    "alpha = 0.00001\n",
+    "alpha = 0.000001\n",
     "\n",
-    "for n in range(10000):\n",
+    "for n in range(100000):\n",
     "    grad_ = g( (w, b, pontos, alvos) )\n",
     "    w -= alpha*grad_[0]\n",
     "    b -= alpha*grad_[1]\n",
@@ -540,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -553,10 +539,10 @@
     {
      "data": {
       "text/plain": [
-       "0.676320939334638"
+       "0.8712328767123287"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
