--- a/demo.ipynb
+++ b/demo.ipynb
@@ -526,14 +526,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2555,) (1, 2555)\n"
+      "(2555,) (2555,)\n"
      ]
     },
     {
@@ -542,7 +542,7 @@
        "0.8712328767123287"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,7 +552,7 @@
     "    est = w.T @ pontos + b\n",
     "    return est\n",
     "\n",
-    "y_pred = predict( w, b, X_test.T )\n",
+    "y_pred = (predict( w, b, X_test.T )).reshape((2555,))\n",
     "\n",
     "# ---------------------------------------- #\n",
     "\n",
