--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
        "4       1  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,9 +423,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Pedro Antônio Silva\\AppData\\Local\\Temp\\ipykernel_2164\\401889612.py:13: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  dfo = dfo1.append(dfo2)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -822,7 +830,7 @@
        "[549 rows x 21 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -847,24 +855,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    156\n",
-       "1    118\n",
+       "0    160\n",
+       "1    114\n",
        "Name: stroke, dtype: int64"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dfa = dfo.drop(columns=['stroke','id']).astype(float)\n",
+    "dfa = dfo.drop(columns=['stroke','id','ever_married_No','Residence_type_Rural']).astype(float)\n",
     "# dfa = dfa.drop(columns=['work_type_Never_worked','work_type_Private','work_type_Self-employed','work_type_children'])\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(dfa, dfo['stroke'], train_size=0.5)\n",
@@ -874,7 +882,369 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>hypertension</th>\n",
+       "      <th>heart_disease</th>\n",
+       "      <th>avg_glucose_level</th>\n",
+       "      <th>bmi</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>ever_married_Yes</th>\n",
+       "      <th>work_type_Govt_job</th>\n",
+       "      <th>work_type_Never_worked</th>\n",
+       "      <th>work_type_Private</th>\n",
+       "      <th>work_type_Self-employed</th>\n",
+       "      <th>work_type_children</th>\n",
+       "      <th>Residence_type_Urban</th>\n",
+       "      <th>smoking_status_Unknown</th>\n",
+       "      <th>smoking_status_formerly smoked</th>\n",
+       "      <th>smoking_status_never smoked</th>\n",
+       "      <th>smoking_status_smokes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>50.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>81.96</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>30.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>91.23</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>78.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>206.53</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>68.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>233.30</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>71.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>93.60</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4976</th>\n",
+       "      <td>43.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>143.43</td>\n",
+       "      <td>45.9</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4977</th>\n",
+       "      <td>65.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>205.77</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4999</th>\n",
+       "      <td>70.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>221.58</td>\n",
+       "      <td>47.5</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5018</th>\n",
+       "      <td>52.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>233.29</td>\n",
+       "      <td>48.9</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5087</th>\n",
+       "      <td>45.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>224.10</td>\n",
+       "      <td>56.6</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>549 rows × 17 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       age  hypertension  heart_disease  avg_glucose_level   bmi  gender  \\\n",
+       "0     50.0           1.0            0.0              81.96   0.0     0.0   \n",
+       "1     30.0           0.0            0.0              91.23   0.0     0.0   \n",
+       "2     78.0           1.0            1.0             206.53   0.0     1.0   \n",
+       "3     68.0           1.0            1.0             233.30   0.0     1.0   \n",
+       "4     71.0           1.0            0.0              93.60   0.0     0.0   \n",
+       "...    ...           ...            ...                ...   ...     ...   \n",
+       "4976  43.0           0.0            0.0             143.43  45.9     0.0   \n",
+       "4977  65.0           0.0            0.0             205.77  46.0     1.0   \n",
+       "4999  70.0           0.0            0.0             221.58  47.5     1.0   \n",
+       "5018  52.0           1.0            0.0             233.29  48.9     1.0   \n",
+       "5087  45.0           0.0            0.0             224.10  56.6     1.0   \n",
+       "\n",
+       "      ever_married_Yes  work_type_Govt_job  work_type_Never_worked  \\\n",
+       "0                  0.0                 0.0                     0.0   \n",
+       "1                  1.0                 0.0                     0.0   \n",
+       "2                  1.0                 0.0                     0.0   \n",
+       "3                  1.0                 0.0                     0.0   \n",
+       "4                  1.0                 0.0                     0.0   \n",
+       "...                ...                 ...                     ...   \n",
+       "4976               1.0                 0.0                     0.0   \n",
+       "4977               1.0                 0.0                     0.0   \n",
+       "4999               1.0                 0.0                     0.0   \n",
+       "5018               1.0                 0.0                     0.0   \n",
+       "5087               1.0                 0.0                     0.0   \n",
+       "\n",
+       "      work_type_Private  work_type_Self-employed  work_type_children  \\\n",
+       "0                   1.0                      0.0                 0.0   \n",
+       "1                   1.0                      0.0                 0.0   \n",
+       "2                   1.0                      0.0                 0.0   \n",
+       "3                   1.0                      0.0                 0.0   \n",
+       "4                   0.0                      1.0                 0.0   \n",
+       "...                 ...                      ...                 ...   \n",
+       "4976                0.0                      1.0                 0.0   \n",
+       "4977                1.0                      0.0                 0.0   \n",
+       "4999                1.0                      0.0                 0.0   \n",
+       "5018                0.0                      1.0                 0.0   \n",
+       "5087                1.0                      0.0                 0.0   \n",
+       "\n",
+       "      Residence_type_Urban  smoking_status_Unknown  \\\n",
+       "0                      1.0                     0.0   \n",
+       "1                      1.0                     0.0   \n",
+       "2                      0.0                     0.0   \n",
+       "3                      0.0                     1.0   \n",
+       "4                      0.0                     0.0   \n",
+       "...                    ...                     ...   \n",
+       "4976                   1.0                     1.0   \n",
+       "4977                   1.0                     0.0   \n",
+       "4999                   1.0                     0.0   \n",
+       "5018                   1.0                     0.0   \n",
+       "5087                   0.0                     0.0   \n",
+       "\n",
+       "      smoking_status_formerly smoked  smoking_status_never smoked  \\\n",
+       "0                                1.0                          0.0   \n",
+       "1                                0.0                          0.0   \n",
+       "2                                0.0                          1.0   \n",
+       "3                                0.0                          0.0   \n",
+       "4                                0.0                          1.0   \n",
+       "...                              ...                          ...   \n",
+       "4976                             0.0                          0.0   \n",
+       "4977                             1.0                          0.0   \n",
+       "4999                             0.0                          1.0   \n",
+       "5018                             0.0                          1.0   \n",
+       "5087                             0.0                          1.0   \n",
+       "\n",
+       "      smoking_status_smokes  \n",
+       "0                       0.0  \n",
+       "1                       1.0  \n",
+       "2                       0.0  \n",
+       "3                       0.0  \n",
+       "4                       0.0  \n",
+       "...                     ...  \n",
+       "4976                    0.0  \n",
+       "4977                    0.0  \n",
+       "4999                    0.0  \n",
+       "5018                    0.0  \n",
+       "5087                    0.0  \n",
+       "\n",
+       "[549 rows x 17 columns]"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,35 +1253,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([[ 0.00474525],\n",
-       "        [ 0.74939798],\n",
-       "        [-0.04676682],\n",
-       "        [-0.00599639],\n",
-       "        [ 0.04452141],\n",
-       "        [-0.79435075],\n",
-       "        [-0.2204862 ],\n",
-       "        [-0.64940188],\n",
-       "        [ 0.76137508],\n",
-       "        [ 1.28833794],\n",
-       "        [ 0.8401575 ],\n",
-       "        [ 2.96969648],\n",
-       "        [ 1.72416549],\n",
-       "        [-0.45547319],\n",
-       "        [-0.26017641],\n",
-       "        [-0.19831651],\n",
-       "        [-0.07007496],\n",
-       "        [-0.69038418],\n",
-       "        [ 2.16176862]]),\n",
-       " -0.014133306842918233)"
+       "(array([[-0.0323535 ],\n",
+       "        [-0.66025155],\n",
+       "        [-1.2120844 ],\n",
+       "        [ 0.00584775],\n",
+       "        [ 0.03366245],\n",
+       "        [-0.71237212],\n",
+       "        [ 3.23202401],\n",
+       "        [ 2.1218262 ],\n",
+       "        [-0.23254249],\n",
+       "        [-0.47287289],\n",
+       "        [ 0.72010217],\n",
+       "        [-0.6629614 ],\n",
+       "        [-1.03272693],\n",
+       "        [ 0.04477538],\n",
+       "        [-1.18125024],\n",
+       "        [ 0.5549822 ],\n",
+       "        [-1.39741281]]),\n",
+       " 0.027361751551362678)"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -938,7 +1306,7 @@
     "b = 0.0\n",
     "alpha = 0.000001\n",
     "\n",
-    "for n in range(10000):\n",
+    "for n in range(100000):\n",
     "    grad_ = g( (w, b, pontos, alvos) )\n",
     "    w -= alpha*grad_[0]\n",
     "    b -= alpha*grad_[1]\n",
@@ -950,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -963,10 +1331,10 @@
     {
      "data": {
       "text/plain": [
-       "0.32727272727272727"
+       "0.33090909090909093"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -990,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1003,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1013,7 +1381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1030,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
